k8s/manifests/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker
  namespace: task-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:latest
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: kafka-storage
              mountPath: /var/lib/kafka/data
      volumes:
        - name: kafka-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker
  namespace: task-scheduler
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: kafka-broker
